--- a/app/templates/components/_data_table_header.html
+++ b/app/templates/components/_data_table_header.html
@@ -16,10 +16,11 @@
             <button
                 :id="activeTab === 'categories' ? 'addCategory' : 'addProduct'"
                 @click="activeTab === 'categories' ? addCategory() : addProduct()"
+                :disabled="tableState != GlobalStates.NONE"
                 class="text-white w-3/4 h-1/3 bg-cyan-600 hover:bg-sky-600 
                 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm 
                 px-5 py-2.5 me-2 mb-4 dark:bg-blue-600 dark:hover:bg-blue-700 
-                focus:outline-none dark:focus:ring-blue-800"
+                focus:outline-none dark:focus:ring-blue-800 disabled:opacity-50 disabled:cursor-not-allowed"
             >
                 <span x-text="activeTab === 'categories' ? 'Add category' : 'Add product'"></span>
             </button>
@@ -27,10 +28,11 @@
             <button 
                 :id="activeTab === 'categories' ? 'removeCategory' : 'removeProduct'"
                 @click="startSelecting()"
+                :disabled="tableState != GlobalStates.NONE"
                 class=" w-3/4 h-1/3 py-2.5 px-5 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border
                 border-gray-200 hover:bg-gray-100 hover:text-cyan-700 focus:z-10 focus:ring-4 focus:ring-gray-100 
                 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white
-                dark:hover:bg-gray-700"
+                dark:hover:bg-gray-700 disabled:opacity-50 disabled:cursor-not-allowed"
             >
 
                 <span x-text="activeTab === 'categories' ? 'Remove category' : 'Remove product'"></span>
