adding rows complete

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -46,6 +46,8 @@
     <script src="{{ url_for('static', filename='js/headerManipulations.js') }}"></script>
     <script src="{{ url_for('static', filename='js/tableState.js') }}"></script>
     <script src="{{ url_for('static', filename='js/rowComponent.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/createRow.js') }}"></script>
+
 
 </body>
 
