scramble on edit

--- a/app/templates/components/_data_table.html
+++ b/app/templates/components/_data_table.html
@@ -59,12 +59,12 @@
                 {% for key, value in item.items() %}
                     {% if key == 'name' %}
                         <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                            <span x-show="!editing">{{ value }}</span>
+                            <span x-show="!editing" class="text-scramble">{{ value }}</span>
                             <input x-cloak x-show="editing" type="text" id="name-input" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" value="{{ value }}" />
                         </th>
                     {% else %}
                         <td class="px-6 py-4">
-                            <span x-show="!editing">{{ value }}</span>
+                            <span x-show="!editing" class="text-scramble">{{ value }}</span>
                             <input x-cloak x-show="editing" type="text" id="{{key}}-input" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" value="{{ value }}" />
                         </td>
                     {% endif %}
