--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -47,7 +47,7 @@
     <script src="{{ url_for('static', filename='js/tableState.js') }}"></script>
     <script src="{{ url_for('static', filename='js/rowComponent.js') }}"></script>
     <script src="{{ url_for('static', filename='js/createRow.js') }}"></script>
-
+    <!-- <script src="{{ url_for('static', filename='js/textScramble.js') }}"></script> -->
 
 </body>
 
