--- a/app/templates/components/_header.html
+++ b/app/templates/components/_header.html
@@ -1,4 +1,4 @@
-<nav class="sticky top-0 z-50 border-gray-200 bg-gray-100 !bg-opacity-65 dark:bg-gray-600">
+<nav class="sticky top-0 z-50 border-gray-200 bg-gray-100 dark:bg-gray-600 transition-transform duration-300">
   <div class="max-w-screen-2xl flex flex-wrap items-center justify-between mx-auto p-4">
     <div class="flex items-center gap-20">
       <a href="{{ url_for('main.home') }}" class="flex items-center space-x-5 rtl:space-x-reverse">
@@ -63,3 +63,30 @@
     </div>
   </div>
 </nav>
+
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const navbar = document.querySelector("nav");
+    let lastScrollY = window.pageYOffset;
+    const scrollThreshold = 20; 
+
+    window.addEventListener("scroll", () => {
+      const currentScrollY = window.pageYOffset;
+
+      if (Math.abs(lastScrollY - currentScrollY) <= scrollThreshold) {
+        return;
+      }
+
+      if (lastScrollY < currentScrollY) {
+        navbar.classList.add("translate-y-[-100%]"); 
+        navbar.classList.remove("translate-y-0");
+      } else {
+        navbar.classList.add("translate-y-0"); 
+        navbar.classList.remove("translate-y-[-100%]");
+      }
+
+      lastScrollY = currentScrollY;
+    });
+  });
+</script>
+
