receipts page + routing

--- a/app/templates/pages/receipts.html
+++ b/app/templates/pages/receipts.html
@@ -15,7 +15,8 @@
                 {% include 'components/_workers_topbar.html' %}
             </div>        
 
-                {% include 'components/_worker_card.html' %}
+            {% include 'components/_receipt.html' %}
+            
         </div>
 
         <div class="fixed inset-x-0 bottom-0 -z-10 transform-gpu overflow-hidden blur-3xl " aria-hidden="true">
