--- a/app/templates/components/_header.html
+++ b/app/templates/components/_header.html
@@ -37,6 +37,14 @@
                 Staff & Clients
               </a>
             </li>
+            <li>
+              <a href="{{ url_for('main.receipts') }}" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 
+              md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white
+              md:dark:hover:!text-cyan-700 dark:hover:bg-gray-700 dark:hover:text-white 
+              md:dark:hover:bg-transparent">
+                Receipts
+              </a>
+            </li>
           </ul>
         </div>
       </div>
