receipts and restyling

--- a/app/templates/components/_header.html
+++ b/app/templates/components/_header.html
@@ -17,30 +17,30 @@
             <li>
               <a href="{{ url_for('main.home') }}" class="block py-2 px-3 md:p-0 text-gray-900 rounded
               hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white
-                md:dark:md:hover:!text-cyan-700 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
+                md:dark:hover:text-cyan-600 dark:hover:bg-gray-700  md:dark:hover:bg-transparent"
                 aria-current="page">
                 Home
               </a>
             </li>
             <li>
               <a href="{{ url_for('goods_and_categories.goods_in_store') }}" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100
-              md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white md:dark:hover:!text-cyan-700
-              dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">
+              md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white md:dark:hover:text-cyan-600
+              dark:hover:bg-gray-700  md:dark:hover:bg-transparent">
                 Goods & Categories
               </a>
             </li>
             <li>
               <a href="{{ url_for('staff_and_clients.workers') }}" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 
               md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white
-              md:dark:hover:!text-cyan-700 dark:hover:bg-gray-700 dark:hover:text-white 
+              md:dark:hover:text-cyan-600 dark:hover:bg-gray-700  
               md:dark:hover:bg-transparent">
                 Staff & Clients
               </a>
             </li>
             <li>
-              <a href="{{ url_for('main.receipts') }}" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 
+              <a href="{{ url_for('receipts.checks') }}" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 
               md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white
-              md:dark:hover:!text-cyan-700 dark:hover:bg-gray-700 dark:hover:text-white 
+              md:dark:hover:text-cyan-600 dark:hover:bg-gray-700  
               md:dark:hover:bg-transparent">
                 Receipts
               </a>
@@ -55,7 +55,7 @@
             <li>
               <a href="{{ url_for('main.login') }}" class="block py-2 px-3 ml-12 md:p-0 text-gray-900 rounded hover:bg-gray-100
               md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white
-              md:dark:hover:!text-cyan-700 dark:hover:bg-gray-700 dark:hover:text-white 
+              md:dark:hover:text-cyan-600 dark:hover:bg-gray-700  
               md:dark:hover:bg-transparent">
                 Log in 
               </a>
