--- a/app/templates/pages/goods_and_categories.html
+++ b/app/templates/pages/goods_and_categories.html
@@ -3,7 +3,7 @@
 {% block title %}Goods and categories{% endblock %}
 
 {% block content %}
-<div class="flex flex-col min-h-screen" x-data="{ activeTab: '{{active_tab}}' }">
+<div class="flex flex-col" x-data="{ activeTab: '{{active_tab}}' }">
 
     <div class="fixed inset-x-6 top-[-5rem] -z-10 transform-gpu overflow-hidden blur-3xl " aria-hidden="true">
         <div class="relative left-1/6 -z-10 aspect-[1155/678] w-[36.125rem] max-w-none -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-purple-400 via-[#2bb3d3] to-[#0aaa9d] opacity-30 sm:left-[calc(50%-40rem)] sm:w-[72.1875rem] bg-[length:300%_auto] animate-blobs" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
@@ -13,7 +13,7 @@
         <div class="relative w-3/4 overflow-x-auto bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
             <div class="sm:hidden">
                 <label for="tabs" class="sr-only">Select tab</label>
-                <select id="tabs" class="bg-gray-50 border-0 border-b border-gray-200 text-gray-900 text-sm rounded-t-lg focus:ring-cyan-600 focus:border-cyan-700 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                <select id="tabs" class="bg-gray-50 border-0 border-b border-gray-200 text-gray-900 text-sm rounded-t-lg focus:ring-cyan-600 focus:border-cyan-700 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-cyan-500 dark:focus:border-cyan-500">
                     <option>Goods in store</option>
                     <option>Goods</option>
                     <option>Categories</option>
@@ -23,17 +23,17 @@
                 <li class="w-full">
                     <a id="goods-in-store-tab" href="{{ url_for('goods_and_categories.goods_in_store') }}" data-tabs-target="#goods-in-store" aria-controls="goods-in-store" 
                     aria-selected="{{ 'true' if active_tab == 'goods_in_store' else 'false' }}" class="inline-block w-full p-4 aria-selected:text-cyan-600 focus:text-cyan-600 hover:!text-cyan-700 rounded-ss-lg bg-gray-50 
-                    hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600">Goods in store</a>
+                    hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600 dark:hover:!text-cyan-500">Goods in store</a>
                 </li>
                 <li class="w-full">
                     <a id="goods-tab" href="{{ url_for('goods_and_categories.goods') }}" data-tabs-target="#goods" aria-controls="goods" aria-selected="{{ 'true' if active_tab == 'goods' else 'false' }}"
                      class="inline-block w-full p-4 aria-selected:text-cyan-600 focus:text-cyan-600 hover:!text-cyan-700 bg-gray-50 
-                     hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600">Goods</a>
+                     hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600 dark:hover:!text-cyan-500">Goods</a>
                 </li>
                 <li class="w-full">
                     <a id="categories-tab" href="{{ url_for('goods_and_categories.categories') }}" data-tabs-target="#categories" aria-controls="categories" 
                     aria-selected="{{ 'true' if active_tab == 'categories' else 'false' }}" class="inline-block w-full p-4 aria-selected:text-cyan-600 focus:text-cyan-600 hover:!text-cyan-700 rounded-se-lg 
-                    bg-gray-50 hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600">Categories</a>
+                    bg-gray-50 hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600 dark:hover:!text-cyan-500">Categories</a>
                 </li>
             </ul>
             <div id="fullWidthTabContent" class="border-t border-gray-200 dark:border-gray-600">
