--- a/app/templates/components/_data_table.html
+++ b/app/templates/components/_data_table.html
@@ -18,7 +18,7 @@
                             type="checkbox"
                             x-model="$store.tableState.selectAll"
                             @click="$store.tableState.toggleSelectAll({{items}}, '{{active_tab}}')"
-                            class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
+                            class="w-4 h-4 text-cyan-800 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-cyan-800 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
                         >
                         <label for="checkbox-all-search" class="sr-only">checkbox</label>
                     </div>
@@ -51,7 +51,7 @@
                             type="checkbox"
                             :checked="isChecked()"
                             @change="toggleSelection()"
-                            class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
+                            class="w-4 h-4 text-cyan-800 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-cyan-800 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
                         >
                         <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
                     </div>
@@ -60,22 +60,22 @@
                     {% if key == 'name' %}
                         <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
                             <span x-show="!editing" class="text-scramble">{{ value }}</span>
-                            <input x-cloak x-show="editing" type="text" id="name-input" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" value="{{ value }}" />
+                            <input x-cloak x-show="editing" type="text" id="name-input" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-cyan-500 dark:focus:border-cyan-500" value="{{ value }}" />
                         </th>
                     {% else %}
                         <td class="px-6 py-4">
                             <span x-show="!editing" class="text-scramble">{{ value }}</span>
-                            <input x-cloak x-show="editing" type="text" id="{{key}}-input" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" value="{{ value }}" />
+                            <input x-cloak x-show="editing" type="text" id="{{key}}-input" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-cyan-500 dark:focus:border-cyan-500" value="{{ value }}" />
                         </td>
                     {% endif %}
                 {% endfor %}
                 <td x-show="tableState != GlobalStates.SELECTING" class="px-6 py-4 text-right max-w-28">
-                    <button x-show="!editing" @click="toggleRowEdit()" class="font-medium text-sky-600 dark:text-blue-500 hover:underline">
+                    <button x-show="!editing" @click="toggleRowEdit()" class="font-medium text-sky-600 dark:text-cyan-500 hover:underline">
                         <span>Edit</span>
                     </button>
 
                     <div x-show="editing" x-cloak class="flex flex-row gap-4 justify-center">
-                        <button  @click="saveEditedRow()" class="font-medium text-sky-600 dark:text-blue-500 hover:underline">
+                        <button  @click="saveEditedRow()" class="font-medium text-sky-600 dark:text-cyan-500 hover:underline">
                             <span>Save</span>
                         </button>
 
