--- a/app/templates/components/_data_table_header.html
+++ b/app/templates/components/_data_table_header.html
@@ -19,8 +19,8 @@
                 :disabled="tableState != GlobalStates.NONE"
                 class="text-white w-3/4 h-1/3 bg-cyan-600 hover:bg-sky-600 
                 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm 
-                px-5 py-2.5 me-2 mb-4 dark:bg-blue-600 dark:hover:bg-blue-700 
-                focus:outline-none dark:focus:ring-blue-800 disabled:opacity-50 disabled:cursor-not-allowed"
+                px-5 py-2.5 me-2 mb-4 dark:bg-cyan-800 dark:hover:bg-cyan-900 
+                focus:outline-none dark:focus:ring-cyan-950 disabled:opacity-50 disabled:cursor-not-allowed"
             >
                 <span x-text="activeTab === 'categories' ? 'Add category' : 'Add product'"></span>
             </button>
