--- a/app/templates/components/_default_search_input.html
+++ b/app/templates/components/_default_search_input.html
@@ -7,6 +7,6 @@
             </svg>
         </div>
         <input type="search" id="default-search" class="block w-full p-4 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-cyan-700 focus:border-cyan-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-cyan-500 dark:focus:border-blue-500" placeholder="Search {{ active_tab }}..." required />
-        <button type="submit" class="text-white absolute end-2.5 bottom-2.5 !bg-cyan-600 hover:!bg-sky-600 focus:ring-4 focus:outline-none focus:ring-sky-600 font-medium rounded-lg text-sm px-4 py-2 dark:!bg-blue-600 dark:!hover:bg-blue-700 dark:focus:!ring-blue-800">Search</button>
+        <button type="submit" class="text-white absolute end-2.5 bottom-2.5 !bg-cyan-600 hover:!bg-sky-600 focus:ring-4 focus:outline-none focus:ring-sky-600 font-medium rounded-lg text-sm px-4 py-2 dark:!bg-cyan-800 dark:!hover:bg-cyan-900 dark:focus:!ring-cyan-950">Search</button>
     </div>
 </form>
