--- a/app/templates/components/_dropdown_search_input.html
+++ b/app/templates/components/_dropdown_search_input.html
@@ -27,7 +27,7 @@
             border-s-gray-50 border-s-2 border border-gray-300 focus:ring-blue-500 focus:border-blue-500 
             dark:bg-gray-700 dark:border-s-gray-700  dark:border-gray-600 dark:placeholder-gray-400 
             dark:text-white dark:focus:border-blue-500" placeholder="Search different {{items}}..." />
-            <button class="absolute top-0 end-0 p-2.5 text-sm font-medium h-full text-white bg-cyan-600 rounded-e-lg border border-cyan-700 hover:bg-sky-600 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+            <button class="absolute top-0 end-0 p-2.5 text-sm font-medium h-full text-white bg-cyan-600 rounded-e-lg border border-cyan-700 hover:bg-sky-600 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-cyan-800 dark:hover:bg-cyan-900 dark:focus:ring-cyan-950">
                 <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
                 </svg>
