--- a/app/templates/components/_login_form.html
+++ b/app/templates/components/_login_form.html
@@ -10,7 +10,7 @@
         <label for="email" class="block text-lg font-medium leading-6 text-gray-900 dark:text-gray-300">Email address</label>
         <div class="mt-2">
           <input id="email" name="email" type="email" autocomplete="email" x-model="email" required class="block w-full rounded-md border-0 text-xl 
-          py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 
+          py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 dark:text-gray-200
           focus:ring-inset focus:ring-cyan-600 sm:text-sm sm:leading-6 dark:bg-gray-700 dark:border-gray-600 dark:ring-gray-500">
         </div>
       </div>
@@ -25,15 +25,16 @@
         <div class="mt-2">
           <input id="password" name="password" type="password" autocomplete="current-password" x-model="password" required class="block w-full rounded-md 
           border-0 text-xl py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 
-          focus:ring-2 focus:ring-inset focus:ring-cyan-600 sm:text-sm sm:leading-6 dark:bg-gray-700 dark:border-gray-600 dark:ring-gray-500">
+          focus:ring-2 focus:ring-inset focus:ring-cyan-600 sm:text-sm sm:leading-6 dark:bg-gray-700 dark:border-gray-600 dark:ring-gray-500 dark:text-gray-200">
         </div>
       </div>
 
       <div>
         <button type="LogIn" :disabled="email === '' || password === ''" class="flex w-full h-12 justify-center items-center rounded-md  px-3 py-1.5 
-        bg-cyan-600 text-xl font-semibold text-white shadow-sm hover:bg-sky-600 disabled:opacity-50
+        text-xl font-semibold text-white shadow-sm bg-cyan-600 hover:bg-sky-600 disabled:opacity-50
         focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2
-        focus-visible:outline-sky-400">
+        focus-visible:outline-sky-400 dark:bg-cyan-800 dark:hover:bg-cyan-900 
+        focus:outline-none dark:focus:ring-cyan-950">
          Log in
         </button>
       </div>
