--- a/app/templates/components/_receipt.html
+++ b/app/templates/components/_receipt.html
@@ -1,5 +1,7 @@
+
+{% for receipt in receipts %}
 <div class="w-full max-w-lg">
-    <div class="rounded-lg shadow-lg p-12 text-xs sm:mx-0 bg-white dark:bg-gray-700 border-gray-800 border">
+    <div class="rounded-lg shadow-lg p-12 text-xs sm:mx-0 bg-white border border-gray-200 dark:bg-custom-gradient dark:border-gray-700">
       <div>
         <div class="flex flex-col">
 
@@ -18,36 +20,36 @@
         <hr class="my-4">
         <div class="dark:text-gray-200">
           <div class="flex justify-between items-center">
-            <span class="font-medium text-base">House Blend</span><span class="text-base font-medium">$15.00</span>
+            <span class="font-medium text-base">Potatoes</span><span class="text-base font-medium">$2.69</span>
+          </div>
+          <div class="mb-4 flex justify-between items-center">
+            <span>*Quantity:</span><span class="">2 kg</span>
+          </div>
+          <div class="flex justify-between items-center">
+            <span class="font-medium text-base">Gauda cheese (200 g)</span><span class="text-base font-medium">$2.50</span>
           </div>
           <div class="mb-4 flex justify-between items-center">
             <span>*Quantity:</span><span class="">1</span>
           </div>
           <div class="flex justify-between items-center">
-            <span class="font-medium text-base">French Press</span><span class="text-base font-medium">$29.50</span>
-          </div>
-          <div class="mb-4 flex justify-between items-center">
-            <span>*Quantity:</span><span class="">1</span>
+            <span class="font-medium text-base">Milk "Yahotynske"</span><span
+              class="text-base font-medium">$3.00</span>
           </div>
           <div class="flex justify-between items-center">
-            <span class="font-medium text-base">Stainless Steel Mugs</span><span
-              class="text-base font-medium">$43.00</span>
-          </div>
-          <div class="flex justify-between items-center">
-            <span>*Quantity:</span><span class="">2</span>
+            <span>*Quantity:</span><span class="">3</span>
           </div>
           <hr class="my-4">
           <div class="flex justify-between items-center">
-            <span>Shipping Costs:</span><span class="">$0.00</span>
+            <span>Promotion reduction:</span><span class="">-$0.00</span>
           </div>
           <div class="mb-2 flex justify-between items-center">
-            <span>Taxes & Fees</span><span class="">$8.36</span>
+            <span>Taxes & Fees</span><span class="">$0.36</span>
           </div>
           <div class="flex justify-between items-center">
-            <span class="text-lg font-medium">Total</span><span class="text-lg font-medium">$96.06</span>
+            <span class="text-lg font-medium">Total</span><span class="text-lg font-medium">$8.19</span>
           </div>
         </div>
       </div>
     </div>
   </div>
-  
+{% endfor %}
