--- a/app/templates/components/_workers_topbar.html
+++ b/app/templates/components/_workers_topbar.html
@@ -1,7 +1,7 @@
 <div class="w-full mt-5 text-center bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
     <div class="sm:hidden">
         <label for="tabs" class="sr-only">Select tab</label>
-        <select id="tabs" class="bg-gray-50 border-0 border-b border-gray-200 text-gray-900 text-sm rounded-t-lg focus:ring-cyan-600 focus:border-cyan-700 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+        <select id="tabs" class="bg-gray-50 border-0 border-b border-gray-200 text-gray-900 text-sm rounded-t-lg focus:ring-cyan-600 focus:border-cyan-700 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-cyan-500 dark:focus:border-cyan-500">
             <option>Workers</option>
             <option>Customers</option>
         </select>
@@ -10,12 +10,12 @@
         <li class="w-full">
             <a id="workers" href="{{ url_for('staff_and_clients.workers') }}" data-tabs-target="#workers" aria-controls="workers" 
             aria-selected="{{ 'true' if active_tab == 'workers' else 'false' }}" class="inline-block w-full p-4 aria-selected:text-cyan-600 focus:text-cyan-600 hover:!text-cyan-700 rounded-ss-lg bg-gray-50 
-            hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600">Workers</a>
+            hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600 dark:hover:!text-cyan-500">Workers</a>
         </li>
         <li class="w-full">
             <a id="clients-tab" href="{{ url_for('staff_and_clients.clients') }}" data-tabs-target="#clients" aria-controls="clients" aria-selected="{{ 'true' if active_tab == 'clients' else 'false' }}"
              class="inline-block w-full p-4 aria-selected:text-cyan-600 focus:text-cyan-600 hover:!text-cyan-700 bg-gray-50 
-             hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600">Customers</a>
+             hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600 dark:hover:!text-cyan-500">Customers</a>
         </li>
     </ul>
     <div class="flex flex-col my-4 mx-8">
@@ -34,8 +34,8 @@
             </div>
             <div class="w-1/4 flex flex-col justify-center items-center">
                 <button class="text-white w-3/4 h-1/3 bg-cyan-600 hover:bg-sky-600 focus:ring-4 focus:ring-blue-300
-                font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-4 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none
-                dark:focus:ring-blue-800">
+                font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-4 dark:bg-cyan-800 dark:hover:bg-cyan-900 focus:outline-none
+                dark:focus:ring-cyan-950">
                     Add worker
                 </button>
                 <button class=" w-3/4 h-1/3 py-2.5 px-5 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border
