--- a/app/templates/components/_receipt.html
+++ b/app/templates/components/_receipt.html
@@ -14,7 +14,7 @@
                 </span>
             </h1>
 
-          <p class="text-gray-600 dark:text-gray-200 text-xs">Date: 05.03.22</p>
+          <p class="text-gray-600 dark:text-gray-200 text-xs">Date: 30.03.24</p>
           <p class="text-gray-600 dark:text-gray-200 text-xs">Order Number: 0000000001</p>
         </div>
         <hr class="my-4">
@@ -32,13 +32,21 @@
             <span>*Quantity:</span><span class="">1</span>
           </div>
           <div class="flex justify-between items-center">
+            <span class="font-medium text-base">Chicken wings</span><span class="text-base font-medium">$4.40</span>
+          </div>
+          <div class="mb-4 flex justify-between items-center">
+            <span>*Quantity:</span><span class="">700 g</span>
+          </div>
+          <div class="flex justify-between items-center">
             <span class="font-medium text-base">Milk "Yahotynske"</span><span
               class="text-base font-medium">$3.00</span>
           </div>
           <div class="flex justify-between items-center">
             <span>*Quantity:</span><span class="">3</span>
           </div>
+          
           <hr class="my-4">
+
           <div class="flex justify-between items-center">
             <span>Promotion reduction:</span><span class="">-$0.00</span>
           </div>
@@ -46,7 +54,7 @@
             <span>Taxes & Fees</span><span class="">$0.36</span>
           </div>
           <div class="flex justify-between items-center">
-            <span class="text-lg font-medium">Total</span><span class="text-lg font-medium">$8.19</span>
+            <span class="text-lg font-medium">Total</span><span class="text-lg font-medium">$12.95</span>
           </div>
         </div>
       </div>
