--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -43,9 +43,9 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.5/dist/cdn.min.js"></script>
     <script type="module" src="{{ url_for('static', filename='js/toast.js') }}" defer></script>
-    <script src="{{ url_for('static', filename='js/headerManipulations.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/tableInteractions.js') }}"></script>
     <script src="{{ url_for('static', filename='js/tableState.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/rowComponent.js') }}"></script>
+    <!-- <script src="{{ url_for('static', filename='js/rowComponent.js') }}"></script> -->
     <script src="{{ url_for('static', filename='js/createRow.js') }}"></script>
     <!-- <script src="{{ url_for('static', filename='js/textScramble.js') }}"></script> -->
 
