--- a/app/templates/components/_data_table_header.html
+++ b/app/templates/components/_data_table_header.html
@@ -15,7 +15,7 @@
     <div x-show="tableState != GlobalStates.SELECTING" class="w-1/4 flex flex-col justify-center items-center">
             <button
                 :id="activeTab === 'categories' ? 'addCategory' : 'addProduct'"
-                @click="activeTab === 'categories' ? addCategory() : addProduct()"
+                @click="createRowForm()"
                 :disabled="tableState != GlobalStates.NONE"
                 class="text-white w-3/4 h-1/3 bg-cyan-600 hover:bg-sky-600 
                 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm 
@@ -27,7 +27,7 @@
 
             <button 
                 :id="activeTab === 'categories' ? 'removeCategory' : 'removeProduct'"
-                @click="startSelecting()"
+                @click="$store.tableState.startSelecting()"
                 :disabled="tableState != GlobalStates.NONE"
                 class=" w-3/4 h-1/3 py-2.5 px-5 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border
                 border-gray-200 hover:bg-gray-100 hover:text-cyan-700 focus:z-10 focus:ring-4 focus:ring-gray-100 
@@ -41,7 +41,7 @@
         </div>
         <div x-cloak x-show="tableState === GlobalStates.SELECTING" class="w-1/4 flex flex-col justify-center items-center">
               <button 
-                @click="activeTab === 'categories' ? removeCategory() : removeProduct()"
+                @click="removeRows()"
                 class="w-3/4 h-1/3 py-2.5 px-5 me-2 mb-4 inline-flex items-center justify-center
                 bg-red-600 hover:bg-red-700 text-white text-sm font-medium
                 focus:outline-none rounded-lg border
@@ -57,7 +57,7 @@
             </button>
 
             <button 
-                @click="stopSelecting()"
+                @click="$store.tableState.stopSelecting()"
                 class=" w-3/4 h-1/3 py-2.5 px-5 me-2 mb-2 inline-flex items-center justify-center text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border
                 border-gray-200 hover:bg-gray-100 hover:text-cyan-700 focus:z-10 focus:ring-4 focus:ring-gray-100 
                 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white
