--- a/app/templates/components/_data_table_header.html
+++ b/app/templates/components/_data_table_header.html
@@ -41,7 +41,7 @@
         </div>
         <div x-cloak x-show="tableState === GlobalStates.SELECTING" class="w-1/4 flex flex-col justify-center items-center">
               <button 
-                @click="removeRows()"
+                @click="$store.tableState.deleteSelected()"
                 class="w-3/4 h-1/3 py-2.5 px-5 me-2 mb-4 inline-flex items-center justify-center
                 bg-red-600 hover:bg-red-700 text-white text-sm font-medium
                 focus:outline-none rounded-lg border
