--- a/app/templates/components/_data_table.html
+++ b/app/templates/components/_data_table.html
@@ -1,95 +1,95 @@
+{% from "components/_dropdown_search.html" import dropdown %}
+
+<table x-data="tableInteractions('{{ active_tab }}', {{ items }}, {{columns_json}}, '{{key_column}}')" class="w-full text-pretty text-left rtl:text-right text-gray-500 dark:text-gray-400">
+    <caption class="p-5 text-lg font-semibold text-left rtl:text-right text-gray-900 bg-white dark:text-white dark:bg-gray-800">
+        <div class="flex flex-col">
+            
+            {% include 'components/_data_table_header.html' %}
+            
+        </div>
+    </caption>
+    <thead class="text-sm text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+        <tr>
+
+            <th x-cloak x-show="tableState === GlobalStates.SELECTING" scope="col" class="p-4">
+                <div class="flex items-center">
+                    <input
+                        id="checkbox-all-search"
+                        type="checkbox"
+                        x-model="$store.tableState.selectAll"
+                        @click="$store.tableState.toggleSelectAll()"
+                        class="w-4 h-4 text-cyan-800 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-cyan-800 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
+                    >
+                    <label for="checkbox-all-search" class="sr-only">checkbox</label>
+                </div>
+            </th>
+
+            {% for header in columns.keys() %}
+            
+            <th scope="col" class="px-6 py-3">
+                <div class="flex items-center">
+                    {{ header|capitalize }}
+                    <a href="javascript:void(0);" @click="$store.tableState.refetchData('{{header}}')"><svg class="w-3 h-3 ms-1.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
+                    <path d="M8.574 11.024h6.852a2.075 2.075 0 0 0 1.847-1.086 1.9 1.9 0 0 0-.11-1.986L13.736 2.9a2.122 2.122 0 0 0-3.472 0L6.837 7.952a1.9 1.9 0 0 0-.11 1.986 2.074 2.074 0 0 0 1.847 1.086Zm6.852 1.952H8.574a2.072 2.072 0 0 0-1.847 1.087 1.9 1.9 0 0 0 .11 1.985l3.426 5.05a2.123 2.123 0 0 0 3.472 0l3.427-5.05a1.9 1.9 0 0 0 .11-1.985 2.074 2.074 0 0 0-1.846-1.087Z"/>
+                    </svg></a>
+                </div>
+            </th>
+
+            {% endfor %}
+            
+            <th x-show="tableState != GlobalStates.SELECTING" scope="col" class="px-6 py-3 max-w-28">
+                <span class="sr-only">Edit</span>
+            </th>
+        </tr>
+    </thead>
 
 
-    <table x-data="tableInteractions('{{ active_tab }}', {{ items }}, {{columns_json}}, '{{key_column}}')" class="w-full text-pretty text-left rtl:text-right text-gray-500 dark:text-gray-400">
-        <caption class="p-5 text-lg font-semibold text-left rtl:text-right text-gray-900 bg-white dark:text-white dark:bg-gray-800">
-            <div class="flex flex-col">
-               
-                {% include 'components/_data_table_header.html' %}
-                
-            </div>
-        </caption>
-        <thead class="text-sm text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
-            <tr>
-
-                <th x-cloak x-show="tableState === GlobalStates.SELECTING" scope="col" class="p-4">
+    <tbody class="table-body" x-data>
+        <template x-for="row in $store.tableState.rowElements" :key="row.{{key_column}}">
+            <tr :class="{'bg-white': true, 'border-b': true, 'dark:bg-gray-800': true, 'dark:border-gray-700': true, 'editing': row.editing}" :data-key="row.{{key_column}}">
+                <td x-cloak x-show="$store.tableState.globalState === GlobalStates.SELECTING" class="w-4 p-4">
                     <div class="flex items-center">
                         <input
-                            id="checkbox-all-search"
                             type="checkbox"
-                            x-model="$store.tableState.selectAll"
-                            @click="$store.tableState.toggleSelectAll()"
-                            class="w-4 h-4 text-cyan-800 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-cyan-800 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
+                            x-model="$store.tableState.selectedItems"
+                            :value="row.{{key_column}}"
+                            class="w-4 h-4 text-cyan-600 bg-gray-100 border-gray-300 rounded focus:ring-cyan-500 dark:focus:ring-cyan-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
                         >
-                        <label for="checkbox-all-search" class="sr-only">checkbox</label>
                     </div>
-                </th>
+                </td>
 
-                {% for header in columns.keys() %}
-                
-                <th scope="col" class="px-6 py-3">
-                    <div class="flex items-center">
-                        {{ header|capitalize }}
-                        <a href="javascript:void(0);" @click="$store.tableState.refetchData('{{header}}')"><svg class="w-3 h-3 ms-1.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
-                        <path d="M8.574 11.024h6.852a2.075 2.075 0 0 0 1.847-1.086 1.9 1.9 0 0 0-.11-1.986L13.736 2.9a2.122 2.122 0 0 0-3.472 0L6.837 7.952a1.9 1.9 0 0 0-.11 1.986 2.074 2.074 0 0 0 1.847 1.086Zm6.852 1.952H8.574a2.072 2.072 0 0 0-1.847 1.087 1.9 1.9 0 0 0 .11 1.985l3.426 5.05a2.123 2.123 0 0 0 3.472 0l3.427-5.05a1.9 1.9 0 0 0 .11-1.985 2.074 2.074 0 0 0-1.846-1.087Z"/>
-                        </svg></a>
-                    </div>
-                </th>
-
-                {% endfor %}
-                
-                <th x-show="tableState != GlobalStates.SELECTING" scope="col" class="px-6 py-3 max-w-28">
-                    <span class="sr-only">Edit</span>
-                </th>
-            </tr>
-        </thead>
-
-
-        <tbody class="table-body" x-data>
-            <template x-for="row in $store.tableState.rowElements" :key="row.{{key_column}}">
-                <tr :class="{'bg-white': true, 'border-b': true, 'dark:bg-gray-800': true, 'dark:border-gray-700': true, 'editing': row.editing}" :data-key="row.{{key_column}}">
-                    <td x-cloak x-show="$store.tableState.globalState === GlobalStates.SELECTING" class="w-4 p-4">
-                        <div class="flex items-center">
-                            <input
-                                type="checkbox"
-                                x-model="$store.tableState.selectedItems"
-                                :value="row.{{key_column}}"
-                                class="w-4 h-4 text-cyan-600 bg-gray-100 border-gray-300 rounded focus:ring-cyan-500 dark:focus:ring-cyan-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
-                            >
-                        </div>
-                    </td>
-
-                    <template x-for="[key, value] in Object.entries(row)" :key="key">
-                        <template x-if="key !== 'editing'">
-                            <td class="px-6 py-4">
-                                <span x-show="!row.editing" x-text="value" class="text-scramble" :data-key="key"></span>
-                                <input x-cloak x-show="row.editing" type="text" :id="`${row.{{key_column}}}-${key}-input`" 
-                                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-cyan-500 dark:focus:border-cyan-500"
-                                :value="value" />
-                            </td>
-                        </template>
+                <template x-for="[key, value] in Object.entries(row)" :key="key">
+                    <template x-if="key !== 'editing'">
+                        <td class="px-6 py-4">
+                            <span x-show="!row.editing" x-text="value" class="text-scramble" :data-key="key"></span>
+                            <input x-cloak x-show="row.editing" type="text" :id="`${row.{{key_column}}}-${key}-input`" 
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-cyan-500 dark:focus:border-cyan-500"
+                            :value="value" />
+                        </td>
                     </template>
-                                           
-                    
-                    <!-- Actions -->
-                    <td x-show="$store.tableState.globalState != GlobalStates.SELECTING" class="px-6 py-4 text-right max-w-28">
-                        <template x-if="!row.editing">
-                            <button @click="$store.tableState.editRow(row.{{key_column}}, true)" class="font-medium text-sky-600 dark:text-cyan-500 hover:underline">
-                                Edit
+                </template>
+                                        
+                
+                <!-- Actions -->
+                <td x-show="$store.tableState.globalState != GlobalStates.SELECTING" class="px-6 py-4 text-right max-w-28">
+                    <template x-if="!row.editing">
+                        <button @click="$store.tableState.editRow(row.{{key_column}}, true)" class="font-medium text-sky-600 dark:text-cyan-500 hover:underline">
+                            Edit
+                        </button>
+                    </template>
+                    <template x-if="row.editing">
+                        <div class="flex flex-row gap-4 justify-center">
+                            <button @click="$store.tableState.saveEditedRow(row.{{key_column}})" class="font-medium text-sky-600 dark:text-cyan-500 hover:underline">
+                                Save
                             </button>
-                        </template>
-                        <template x-if="row.editing">
-                            <div class="flex flex-row gap-4 justify-center">
-                                <button @click="$store.tableState.saveEditedRow(row.{{key_column}})" class="font-medium text-sky-600 dark:text-cyan-500 hover:underline">
-                                    Save
-                                </button>
-                                <button @click="$store.tableState.cancelEditingRow(row.{{key_column}})" class="font-medium text-red-600 dark:text-gray-400 hover:underline">
-                                    Cancel
-                                </button>
-                            </div>
-                        </template>
-                    </td>
-                </tr>
-            </template>
-        </tbody>
-            
-    </table>
+                            <button @click="$store.tableState.cancelEditingRow(row.{{key_column}})" class="font-medium text-red-600 dark:text-gray-400 hover:underline">
+                                Cancel
+                            </button>
+                        </div>
+                    </template>
+                </td>
+            </tr>
+        </template>
+    </tbody>
+        
+</table>
