dropdowns implementation attempt

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -44,6 +44,7 @@
     <script type="module" src="{{ url_for('static', filename='js/toastNotifications.js') }}" defer></script>
     <script type="module" src="{{ url_for('static', filename='js/textScramble.js') }}" defer></script>
     <script type="module" src="{{ url_for('static', filename='js/sendRequest.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/dropdownSearch.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/createRow.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/tableInteractions.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/tableState.js') }}"></script>
