--- a/app/templates/components/_data_table.html
+++ b/app/templates/components/_data_table.html
@@ -62,9 +62,18 @@
                     <template x-if="key !== 'editing'">
                         <td class="px-6 py-4">
                             <span x-show="!row.editing" x-text="value" class="text-scramble" :data-key="key"></span>
-                            <input x-cloak x-show="row.editing" type="text" :id="`${row.{{key_column}}}-${key}-input`" 
-                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-cyan-500 dark:focus:border-cyan-500"
-                            :value="value" />
+                            <template x-if="rawColumns[key] === 'PK'">
+                                <span x-show="row.editing" x-text="value" class="text-scramble" :data-key="key"></span>
+                            </template>
+                            <template x-if="rawColumns[key] == 'FK'">
+                                <span x-cloak x-show="row.editing">FK must be here</span>
+                                <!-- {{ dropdown(['hello', 'goodbye']) }} -->
+                            </template>
+                            <template x-if="rawColumns[key] === 'ATTRIB'">
+                                <input x-cloak x-show="row.editing" type="text" :id="`${row.{{key_column}}}-${key}-input`" 
+                                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-cyan-500 dark:focus:border-cyan-500"
+                                :value="value" />
+                            </template>
                         </td>
                     </template>
                 </template>
