--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -27,7 +27,7 @@
     
 </head>
 
-<body class="dark:bg-gray-800 -z-20">
+<body class="dark:bg-gray-800 -z-20 custom-scrollbar">
         {% include 'components/_header.html' %}
 
         <ul class="notifications z-50"></ul>
