--- a/app/static/css/toast.css
+++ b/app/static/css/toast.css
@@ -138,3 +138,22 @@
     padding: 8px 15px;
   }
 }
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 5px;
+  height: 3px;
+  border-radius: 2px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: #09090a;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: #5c5c7b;
+  border-radius: 50px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #7878a3;
+}
