--- a/app/templates/components/_dropdown_search.html
+++ b/app/templates/components/_dropdown_search.html
@@ -16,7 +16,7 @@
   text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 
   dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white 
   dark:focus:ring-cyan-500 dark:focus:border-cyan-500" placeholder="Search items" autocomplete="off">
-  <div class="overflow-auto max-h-40">
+  <div class="overflow-auto max-h-40 custom-scrollbar">
       <template x-for="option in filteredOptions()" :key="Object.keys(option)[0]">
           <a @click="selectOption(option)" href="javascript:void(0);" class="px-4 py-2 text-gray-700 dark:text-white 
           cursor-pointer rounded-md inline-flex w-full hover:bg-gray-100 dark:hover:bg-gray-600 
