improved styling + tailwind configuration

--- a/app/templates/components/_search_input_by_category.html
+++ b/app/templates/components/_search_input_by_category.html
@@ -1,5 +1,5 @@
 
-<form class="max-w-lg">
+<form class="w-3/5">
     <div class="flex">
         <label for="search-dropdown" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Your Email</label>
         {% set mapper = "Categories" if categories else "Positions" %}
