--- a/app/templates/components/_worker_card.html
+++ b/app/templates/components/_worker_card.html
@@ -23,16 +23,18 @@
             </ul>
         </div>
     </div>
-    <div class="flex flex-col items-center pb-10">
+    <div class="flex flex-col items-center p-10">
         <img class="w-24 h-24 mb-3 rounded-full shadow-lg" src="https://i.ibb.co/f93t1mB/user.png" alt="worker image"/>
         <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">{{ worker.name }}</h5>
-        <span class="text-sm text-gray-500 dark:text-gray-400">{{ worker.id }}</span>
-        <span class="text-sm text-gray-500 dark:text-gray-400">{{ worker.phone_number }}</span>
-        <span class="text-sm text-gray-500 dark:text-gray-400">Employment: {{ worker.employment_date }}</span>
-        <span class="text-sm text-gray-500 dark:text-gray-400">Birthday: {{ worker.birth_date }}</span>
-        <span class="text-sm text-gray-500 dark:text-gray-400">Position: {{ worker.position }}</span>
-        <span class="text-sm text-gray-500 dark:text-gray-400">Address: {{ worker.address }}</span>
-        <span class="mt-2 text-lg text-gray-500 dark:text-gray-400">Salary: {{ worker.salary }}</span>
+        {% for key, value in worker.items() %}
+            {% if key != 'name' %}
+            <div class="flex items-center w-full my-0.5 text-base text-gray-500 dark:text-gray-400">
+                <span class="font-bold dark:text-gray-300">{{ key.replace('_', ' ') | capitalize }}:</span>
+                <span class="mx-2 flex-1 dotted-line"></span> <!-- This creates the dotted line -->
+                <span> {{ value }}</span>
+            </div>
+            {% endif %}
+        {% endfor %}
     </div>
 </div>
 {% endfor %}
