--- a/app/templates/components/_receipts_topbar.html
+++ b/app/templates/components/_receipts_topbar.html
@@ -12,7 +12,7 @@
                 <p class="mt-1 text-base font-normal text-gray-500 dark:text-gray-400">
                     Our supermarket proudly maintains a cutting-edge receipts database, ensuring every transaction is accurately recorded and monitored.
                     This meticulous approach showcases our commitment to transparency and operational excellence, setting new standards in the retail industry.                </p>
-                <div class="py-5 bg-white dark:bg-gray-800">
+                <div class="flex py-5 bg-white dark:bg-gray-800 justify-center">
                     {% include 'components/_default_search_input.html' %}
                 </div>
             </div>
