--- a/app/templates/components/_worker_card.html
+++ b/app/templates/components/_worker_card.html
@@ -22,7 +22,7 @@
             </ul>
         </div>
     </div>
-    <div class="flex flex-col items-center p-10">
+    <div class="flex flex-col items-center px-10 pb-10">
         <img class="w-24 h-24 mb-3 rounded-full shadow-lg" src="https://i.ibb.co/f93t1mB/user.png" alt="worker image"/>
         <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">{{ worker.name }}</h5>
         {% for key, value in worker.items() %}
