--- a/app/templates/components/_header.html
+++ b/app/templates/components/_header.html
@@ -14,7 +14,7 @@
       <div class="flex flex-row">
         <div class="hidden w-full md:block md:w-auto" id="navbar-solid-bg">
           <ul class="flex flex-col text-2xl font-medium mt-4 rounded-lg bg-gray-50 md:space-x-12 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent dark:bg-gray-800 md:dark:bg-transparent dark:border-gray-700">
-            <li class="flex flex-row gap-3">
+            <li>
               <a href="{{ url_for('main.home') }}" class="block py-2 px-3 md:p-0 text-gray-900 rounded
               hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white
                 md:dark:hover:text-cyan-600 dark:hover:bg-gray-700  md:dark:hover:bg-transparent"
@@ -22,20 +22,16 @@
                 Home
               </a>
             </li>
-            <li class="flex flex-row gap-3">
-              <i x-show="notSignedIn" class="fa-solid fa-lock text-gray-500 self-center"></i>
+            <li x-show="signedIn">
               <a href="{{ url_for('goods_and_categories.goods_in_store') }}" 
-              :class="{ 'cursor-default opacity-50 pointer-events-none': notSignedIn }"
               class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100
               md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white md:dark:hover:text-cyan-600
               dark:hover:bg-gray-700  md:dark:hover:bg-transparent">
                 Goods & Categories
               </a>
             </li>
-            <li class="flex flex-row gap-3">
-              <i x-show="notSignedIn" class="fa-solid fa-lock text-gray-500 self-center"></i>
+            <li x-show="signedIn">
               <a href="{{ url_for('staff_and_clients.workers') }}" 
-              :class="{ 'cursor-default opacity-50 pointer-events-none': notSignedIn }"
               class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 
               md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white
               md:dark:hover:text-cyan-600 dark:hover:bg-gray-700  
@@ -43,11 +39,8 @@
                 Staff & Clients
               </a>
             </li>
-            <li class="flex flex-row gap-3">
-              <i x-show="notSignedIn" class="fa-solid fa-lock text-gray-500 self-center"></i>
+            <li x-show="signedIn">
               <a href="{{ url_for('receipts.checks') }}" 
-              :class="{ 'cursor-default opacity-50 pointer-events-none': notSignedIn }"
-
               class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 
               md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white
               md:dark:hover:text-cyan-600 dark:hover:bg-gray-700  
