goods in store prom product dropdown fixed + minor changes

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -49,6 +49,7 @@
     <script type="module" src="{{ url_for('static', filename='js/dropdownSearch.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/createRow.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/tableInteractions.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/homePage.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/userStore.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/tableState.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/searchWithFilter.js') }}"></script>
