--- a/app/templates/components/_header.html
+++ b/app/templates/components/_header.html
@@ -22,7 +22,7 @@
                 Home
               </a>
             </li>
-            <li x-show="signedIn">
+            <li x-cloak x-show="signedIn">
               <a href="{{ url_for('goods_and_categories.goods_in_store') }}" 
               class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100
               md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white md:dark:hover:text-cyan-600
@@ -30,7 +30,7 @@
                 Goods & Categories
               </a>
             </li>
-            <li x-show="signedIn">
+            <li x-cloak x-show="signedIn">
               <a href="{{ url_for('staff_and_clients.workers') }}" 
               class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 
               md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white
@@ -39,7 +39,7 @@
                 Staff & Clients
               </a>
             </li>
-            <li x-show="signedIn">
+            <li x-cloak x-show="signedIn">
               <a href="{{ url_for('receipts.checks') }}" 
               class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 
               md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white
@@ -55,7 +55,7 @@
     <div class="flex">
         <div class="hidden w-full md:block md:w-auto" id="navbar-solid-bg">
           <ul class="items-center flex flex-col text-2xl font-medium mt-4 rounded-lg bg-gray-50 md:space-x-12 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent dark:bg-gray-800 md:dark:bg-transparent dark:border-gray-700">
-            <li>
+            <li x-cloak x-show="!signedIn">
               <a href="{{ url_for('main.login') }}" class="block py-2 px-3 ml-12 md:p-0 text-gray-900 rounded hover:bg-gray-100
               md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white
               md:dark:hover:text-cyan-600 dark:hover:bg-gray-700  
@@ -63,6 +63,33 @@
                 Log in 
               </a>
             </li>
+
+            <button type="button" x-cloak x-show="signedIn" class="flex text-sm bg-gray-800 rounded-full md:me-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-400" id="user-menu-button" aria-expanded="false" data-dropdown-toggle="user-dropdown" data-dropdown-placement="bottom">
+              <span class="sr-only">Open user menu</span>
+              <img class="w-10 h-10 rounded-full" src="https://i.ibb.co/f93t1mB/user.png" alt="person image"/>
+            </button>
+            <!-- Dropdown menu -->
+            <div class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600" id="user-dropdown">
+              <div class="px-4 py-3">
+                <span x-text="userFullName" class="block text-sm text-gray-900 dark:text-white"></span>
+                <span x-text="'Role: '+ userRole " class="block text-sm  text-gray-500 truncate dark:text-gray-400">name@flowbite.com</span>
+              </div>
+              <ul class="py-2" aria-labelledby="user-menu-button">
+                <li>
+                  <a href="javascript:void(0);" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Dashboard</a>
+                </li>
+                <li>
+                  <a href="javascript:void(0);" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Settings</a>
+                </li>
+                <li>
+                  <a href="javascript:void(0);" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Earnings</a>
+                </li>
+                <li>
+                  <a href="javascript:void(0);" @click="logOut()" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Log out</a>
+                </li>
+              </ul>
+            </div>
+
             <li>
               <div>
                 {% include 'components/_theme_switch.html' %}
